--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h2>Beginner Web Developer Portfolio</h2>
     <hr />
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3> 
-    <img src="./assets/images/ChuTopMovies.png/" height="200" alt="Top Movies List"/>
+    <img src="./assets/images/ChuTopMovies.png" height="200" alt="Top Movies List"/>
     <h3><a href="./public/birthday-invite.html">Birthday Project</a></h3>
     <img src="./assets/images/ItsmyBirthday!.png" height="200" alt="Purple Birthday Cake Invitation"/>
     <hr />
